# cmake_build_and_install

./: .gitattributes  CMakeLists.txt
resources/: CMakeLists.txt  firmware.img  firmware.img.sha512
resources/firmware/: CMakeLists.txt  device-a01.img  device-b09.img  device-z11.img
resources/snapshots/: CMakeLists.txt  snapshot001.map  snapshot002.map
src/: CMakeLists.txt  main.cpp
src/tools/: CMakeLists.txt  greeting.cpp  greeting.h
