cmake_minimum_required(VERSION 3.22)

project(cmake_build_and_install)

set(CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED YES)

set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libs by default")

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set(CMAKE_INSTALL_PREFIX /opt/alexen/${PROJECT_NAME} CACHE PATH "Default installation path" FORCE)
endif()

include(GNUInstallDirs)

set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})

set(OUTPUT_STAGE_DIR ${CMAKE_CURRENT_BINARY_DIR}/stage)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_STAGE_DIR}/${CMAKE_INSTALL_BINDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_STAGE_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_STAGE_DIR}/${CMAKE_INSTALL_LIBDIR})

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)

add_subdirectory(src)
